// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readme file generation tests should generate README.md with core properties 1`] = `
"## Application Details
|               |
| ------------- |
|**Generation Date and Time**<br>|
|**App Generator**<br>@sap/generator-fiori-elements|
|**App Generator Version**<br>2.0.1|
|**Generation Platform**<br>|
|**Template Used**<br>List Report Page V4|
|**Service Type**<br>|
|**Service URL**<br>N/A|
|**Module Name**<br>appName|
|**Application Title**<br>appTitle|
|**Namespace**<br>appNamespace|
|**UI5 Theme**<br>a_ui5_theme|
|**UI5 Version**<br>1.2.3|
|**Enable Code Assist Libraries**<br>False|
|**Enable TypeScript**<br>False|
|**Add Eslint configuration**<br>False|

## appName

Fiori project description

### Starting the generated app

-   This app has been generated using the SAP Fiori tools - App Generator, as part of the SAP Fiori tools suite.  

#### Pre-requisites:

1. Active NodeJS LTS (Long Term Support) version and associated supported NPM version.  (See https://nodejs.org)


"
`;

exports[`Readme file generation tests should generate README.md with the correct content including core and optional properties 1`] = `
"## Application Details
|               |
| ------------- |
|**Generation Date and Time**<br>Jan 01 1975|
|**App Generator**<br>@sap/generator-fiori-elements|
|**App Generator Version**<br>2.0.1|
|**Generation Platform**<br>CLI|
|**Template Used**<br>List Report Page V4|
|**Service Type**<br>Local Cap|
|**Service URL**<br>serviceUrl|
|**Module Name**<br>appName|
|**Application Title**<br>appTitle|
|**Namespace**<br>appNamespace|
|**UI5 Theme**<br>a_ui5_theme|
|**UI5 Version**<br>1.2.3|
|**Enable Code Assist Libraries**<br>False|
|**Enable TypeScript**<br>False|
|**Add Eslint configuration**<br>False|
|**Generator Specific Label A**<br>Generator Specific Value A|
|**Generator Specific Label B**<br>Generator Specific Value B|

## appName

Fiori project description

### Starting the generated app

-   This app has been generated using the SAP Fiori tools - App Generator, as part of the SAP Fiori tools suite.  In order to launch the generated app, simply start your CAP project (\`\`\`mvn spring-boot:run\`\`\`) and navigate to the following location in your browser:

http://localhost:8080/someProjectName/webapp/index.html

#### Pre-requisites:

1. Active NodeJS LTS (Long Term Support) version and associated supported NPM version.  (See https://nodejs.org)


"
`;
